--- a/awx/ui/client/src/configuration/auth-form/configuration-auth.partial.html
+++ b/awx/ui/client/src/configuration/auth-form/configuration-auth.partial.html
@@ -14,50 +14,61 @@
         <div class="row">
             <div class="col-lg-12">
                 <div ng-show="authVm.activeAuthForm === 'azure'">
-                    <div id="auth-azure-form">
-
-                    </div>
+                    <div id="auth-azure-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'github'">
-                    <div id="auth-github-form">
-
-                    </div>
+                    <div id="auth-github-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'github_org'">
-                    <div id="auth-github-org-form">
-
-                    </div>
+                    <div id="auth-github-org-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'github_team'">
-                    <div id="auth-github-team-form">
-
-                    </div>
+                    <div id="auth-github-team-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'google_oauth'">
-                    <div id="auth-google-form">
-
-                    </div>
+                    <div id="auth-google-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'ldap'">
-                    <div id="auth-ldap-form">
-
-                    </div>
+                    <div id="auth-ldap-form"></div>
                 </div>
+
+                <div ng-show="authVm.activeAuthForm === 'ldap1'">
+                    <div id="auth-ldap1-form"></div>
+                </div>
+
+                <div ng-show="authVm.activeAuthForm === 'ldap2'">
+                    <div id="auth-ldap2-form"></div>
+                </div>
+
+                <div ng-show="authVm.activeAuthForm === 'ldap3'">
+                    <div id="auth-ldap3-form"></div>
+                </div>
+
+                <div ng-show="authVm.activeAuthForm === 'ldap4'">
+                    <div id="auth-ldap4-form"></div>
+                </div>
+
+                <div ng-show="authVm.activeAuthForm === 'ldap5'">
+                    <div id="auth-ldap5-form"></div>
+                </div>
+
                 <div ng-show="authVm.activeAuthForm === 'radius'">
-                    <div id="auth-radius-form">
-
-                    </div>
+                    <div id="auth-radius-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'tacacs'">
-                    <div id="auth-tacacs-form">
-
-                    </div>
+                    <div id="auth-tacacs-form"></div>
                 </div>
+
                 <div ng-show="authVm.activeAuthForm === 'saml'">
-                    <div id="auth-saml-form">
-
-                    </div>
+                    <div id="auth-saml-form"></div>
                 </div>
+
             </div>
         </div>
     </div>
