Add shard summary_fields & info UI fields
*adds new internal_limit field to Job model for faster reference
*if field is non-blank, populate shard params in summary_fields
*add summary information to UI job/wfj details, JT selector

--- a/awx/ui/client/features/output/details.partial.html
+++ b/awx/ui/client/features/output/details.partial.html
@@ -151,6 +151,12 @@
     <div class="JobResults-resultRowText">{{ vm.jobType.value }}</div>
 </div>
 
+<!-- SHAAAAAARD -->
+<div class="JobResults-resultRow" ng-if="vm.shardDetails">
+    <label class="JobResults-resultRowLabel">{{ vm.shardDetails.label }}</label>
+    <div class="JobResults-resultRowText">{{ vm.shardDetails.offset }}</div>
+</div>
+
 <!-- LAUNCHED BY DETAIL -->
 <div class="JobResults-resultRow" ng-if="vm.launchedBy">
     <label class="JobResults-resultRowLabel">{{ vm.launchedBy.label }}</label>
