--- a/awx/ui/client/src/workflow-results/workflow-results.partial.html
+++ b/awx/ui/client/src/workflow-results/workflow-results.partial.html
@@ -144,6 +144,22 @@
                         </div>
                     </div>
 
+                    <!-- SHAAAAAARD -->
+                    <div class="WorkflowResults-resultRow"
+                        ng-show="workflow.summary_fields.job_template.name">
+                        <label
+                            class="WorkflowResults-resultRowLabel">
+                            {{ strings.labels.SHARD_TEMPLATE }}
+                        </label>
+                        <div class="WorkflowResults-resultRowText">
+                            <a href="{{ shard_job_template_link }}"
+                                aw-tool-tip="{{ strings.tooltips.EDIT_SHARD_TEMPLATE }}"
+                                data-placement="top">
+                                {{ workflow.summary_fields.job_template.name }}
+                            </a>
+                        </div>
+                    </div>
+
                     <!-- EXTRA VARIABLES DETAIL -->
                     <at-code-mirror
                         ng-if="variables"
